# src/main/java/com/agri/federation/dto/AssignFederationAttributesRequest.java
@@ -1,0 +1,10 @@
+package com.agri.federation.dto;
+
+import lombok.Data;
+
+@Data
+public class AssignFederationAttributesRequest {
+
+    private String uniqueNumber;
+    private String uniqueName;
+}
