# src/main/java/com/agri/federation/model/MemberOccupation.java
@@ -1,0 +1,10 @@
+package com.agri.federation.model;
+
+public enum MemberOccupation {
+    JUNIOR,
+    SENIOR,
+    SECRETARY,
+    TREASURER,
+    VICE_PRESIDENT,
+    PRESIDENT
+}
